--- a/PrismDemo/Views/ViewA.xaml
+++ b/PrismDemo/Views/ViewA.xaml
@@ -23,8 +23,8 @@
         <TextBlock VerticalAlignment="Center" Grid.Row="1" Text="LastName: "/>
         <TextBlock VerticalAlignment="Center" Grid.Row="2" Text="Updated: "/>
         
-        <TextBox Grid.Column="1" Margin="5" Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="5" Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox  Grid.Column="1" Margin="5" Text="{Binding  FirstName, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="5" Text="{Binding LastName, UpdateSourceTrigger= PropertyChanged}"/>
         <TextBlock Grid.Column="1" Grid.Row="2" Margin="5" Text="{Binding LastUpdated}"/>
 
         <Button Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Margin="10"
